fixed navbar issue, add to card alignment as well titles margins

--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 .container {
     width: 100%;
     min-height: 100vh;
-    padding-left: 5%;
-    padding-right: 5%;
+    /* padding-left: 5%;
+    padding-right: 5%; */
     box-sizing: border-box;
     overflow: hidden;
 }
@@ -117,7 +117,7 @@ nav ul li.login:hover {
 .col-1 {
     flex-basis: 40%;
     position: relative;
-    margin-left: 50px;
+    margin-left: 5%;
 }
 
 .col-1 h2 {
@@ -189,7 +189,7 @@ button:hover {
 }
 
 .col-2 .controller {
-    width: 90%;
+    width: 85%;
 }
 
 .color-box {
@@ -515,7 +515,7 @@ button:hover {
         top: 73px;
         right: 0;
         z-index: 2;
-        margin-right: 21px;
+        /* margin-right: 21px; */
     }
 
     nav ul li {
